# flooded_island

./: .env.dev  .env.prod.example  .env_dev  .env_prod.example  .gitignore  .linters-info.md  .pre-commit-config.yaml  README.md  build.sh  deploy.sh  run.sh  start.sh  stop.sh
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/game/: __init__.py  board.py  room_manager.py  validator.py  win_checker.py
backend/models/: __init__.py  game.py  messages.py
backend/routers/: __init__.py  websocket.py
deploy/: README.md
deploy/nginx/: flooded-island.conf
deploy/systemd/: flooded-island-backend.service
docs/: current_task.md  game_rules.md  implementation_plan.md  progress.md  project_brief.md  refactoring_brief.md  refactoring_plan.md  tech_context.md  technical_spec.md  ui_design.md
frontend/: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ConnectionStatus.tsx  Field.tsx  GameBoard.tsx  GameConfiguration.tsx  GameOver.tsx  Home.tsx  RoleSelection.tsx  TurnControls.tsx
frontend/src/hooks/: useGameState.ts  useWebSocket.ts
frontend/src/types/: game.ts  index.ts  messages.ts
frontend/src/utils/: roomId.ts  websocket.ts
scripts/: build_dev.sh  build_prod.sh  deploy_dev.sh  deploy_prod.sh  stop_dev.sh  stop_prod.sh
