[project]
name = "flooded-island-backend"
version = "1.0.0"
description = "Backend for Flooded Island game"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "ruff>=0.7.0",
    "pre-commit>=3.8.0",
]

[tool.ruff]
# Set line length to 88 (Black-compatible)
line-length = 88
target-version = "py313"

# Exclude directories
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable rule groups
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
]

# Disable specific rules if needed
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function call in argument defaults
    "ARG001", # Unused function argument (common in FastAPI handlers)
    "ARG002", # Unused method argument
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["game", "models", "routers"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
